# python-project-template

./: EXAMPLE.md  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/notebooks/: README.md  example_analysis.ipynb
{{cookiecutter.project_slug}}/tests/: test_main.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: __init__.py  main.py
